--- a/src/patternfly/utilities/Text/text.scss
+++ b/src/patternfly/utilities/Text/text.scss
@@ -59,7 +59,7 @@ $pf-v6-u-font-weight-options: (
 
 // Font color options
 $pf-v6-u-font-color-options: (
-  text-color-brand-default: (
+  text-color-brand: (
     color var(--pf-t--global--text--color--brand--default)
   ),
   text-color-disabled: (
