feat(utilities): update uses of color utilities

--- a/src/patternfly/demos/Card/templates/card-template-status.hbs
+++ b/src/patternfly/demos/Card/templates/card-template-status.hbs
@@ -35,7 +35,7 @@
               <a href="#">Operators</a>
             {{/l-flex-item}}
             {{#> l-flex-item}}
-              <span class="pf-v6-u-color-200">1 degraged</span>
+              <span class="pf-v6-u-text-color-subtle">1 degraded</span>
             {{/l-flex-item}}
           {{/l-flex}}
         {{/l-flex}}
