--- a/src/patternfly/base/tokens/_tokens-font.scss
+++ b/src/patternfly/base/tokens/_tokens-font.scss
@@ -145,4 +145,12 @@
     var(--pf-t--global--box-shadow--blur--lg) 
     var(--pf-t--global--box-shadow--spread--lg)
     var(--pf-t--global--box-shadow--color--lg);
+
+  // Transitions
+  --pf-t--global--transition: all 250ms cubic-bezier(.42, 0, .58, 1);
+  --pf-t--global--transition--timing-function: cubic-bezier(.645, .045, .355, 1);
+  --pf-t--global--transition--duration: 250ms;
+
+  // List bullet/marker
+  --pf-t--global--list-style: disc outside;
 }
