--- a/src/patternfly/components/Wizard/wizard.scss
+++ b/src/patternfly/components/Wizard/wizard.scss
@@ -52,7 +52,7 @@
   --#{$wizard}__nav-link-toggle--PaddingRight: var(--pf-t--global--spacer--sm);
   --#{$wizard}__nav-link-toggle--PaddingLeft: var(--pf-t--global--spacer--sm);
   --#{$wizard}__nav-link-toggle--Color: var(--pf-t--global--icon--color--regular);
-  --#{$wizard}__nav-link-toggle-icon--Transition: var(--#{$pf-global}--Transition);
+  --#{$wizard}__nav-link-toggle-icon--Transition: var(--pf-t--global--transition);
   --#{$wizard}__nav-link-toggle-icon--Rotate: 0;
   --#{$wizard}__nav-item--m-expanded__link-toggle-icon--Rotate: 90deg;
 
