--- a/src/patternfly/sass-utilities/themes/dark/scss-variables.scss
+++ b/src/patternfly/sass-utilities/themes/dark/scss-variables.scss
@@ -3,7 +3,7 @@ $pf-v5-global--BackgroundColor--100: $pf-v5-color-black-800; // primary backgrou
 $pf-v5-global--BackgroundColor--150: $pf-v5-color-black-850; // in-between special use case background color
 $pf-v5-global--BackgroundColor--200: $pf-v5-color-black-900; // secondary background color
 $pf-v5-global--BackgroundColor--300: $pf-v5-color-black-700; // floats on top of other elements
-$pf-v5-global--BackgroundColor--400: $pf-v5-color-black-600; // form control & item hover on --#{$pf-global}--BackgroundColor--300
+$pf-v5-global--BackgroundColor--400: $pf-v5-color-black-600; // form control & item hover on background-300
 $pf-v5-global--BorderColor--100: $pf-v5-color-black-500; // primary border color
 $pf-v5-global--BorderColor--200: $pf-v5-color-black-500; // secondary border color
 $pf-v5-global--BorderColor--300: $pf-v5-color-black-400;
