--- a/src/patternfly/base/_globals.scss
+++ b/src/patternfly/base/_globals.scss
@@ -125,8 +125,8 @@
   }
 
   :where(a:hover) {
-    --#{$pf-global}--link--Color: var(--pf-t--global--text--color--link--hover);
-    --#{$pf-global}--link--TextDecoration: var(--pf-t--global--link--text-decoration--hover);
+    color: var(--pf-t--global--text--color--link--hover);
+    text-decoration: var(--pf-t--global--link--text-decoration--hover);
   }
 
   :where(
