--- a/src/patternfly/components/AppLauncher/app-launcher.scss
+++ b/src/patternfly/components/AppLauncher/app-launcher.scss
@@ -9,7 +9,7 @@
   --#{$app-launcher}__menu--PaddingTop: var(--#{$pf-global}--spacer--sm);
   --#{$app-launcher}__menu--PaddingBottom: var(--#{$pf-global}--spacer--sm);
   --#{$app-launcher}__menu--Top: calc(100% + var(--#{$pf-global}--spacer--xs));
-  --#{$app-launcher}__menu--ZIndex: var(--#{$pf-global}--ZIndex--sm);
+  --#{$app-launcher}__menu--ZIndex: var(--pf-t--global--Zindex--sm);
   --#{$app-launcher}--m-top__menu--Top: 0;
   --#{$app-launcher}--m-top__menu--TranslateY: calc(-100% - var(--#{$pf-global}--spacer--xs)); // The "dropup" menu must be transformed up and this calculates how much to create space between the toggle and menu
 
