--- a/src/patternfly/components/Banner/banner.scss
+++ b/src/patternfly/components/Banner/banner.scss
@@ -25,7 +25,7 @@
   --#{$banner}--link--disabled--TextDecoration: none;
 
   // modifier variables
-  --#{$banner}--m-sticky--ZIndex: var(--#{$pf-global}--ZIndex--md);
+  --#{$banner}--m-sticky--ZIndex: var(--pf-t--global--Zindex--md);
   --#{$banner}--m-sticky--BoxShadow: var(--pf-t--global--box-shadow--md);
 
   // status modifier variables
