--- a/src/patternfly/components/Drawer/drawer.scss
+++ b/src/patternfly/components/Drawer/drawer.scss
@@ -160,8 +160,8 @@ $pf-v6-c-drawer__panel--list--width: (25, 33, 50, 66, 75, 100);
   ); 
   @include pf-v6-bidirectional-style(
     $prop: --#{$drawer}--m-expanded--m-panel-left__panel--BoxShadow,
-    $ltr-val: var(--#{$pf-global}--BoxShadow--lg-right),
-    $rtl-val: var(--#{$pf-global}--BoxShadow--lg-left)
+    $ltr-val: var(--pf-t--global--box-shadow--lg--right),
+    $rtl-val: var(--pf-t--global--box-shadow--lg--left)
   );
 
   display: flex;
