--- a/src/patternfly/patternfly-theme-dark-unversioned.scss
+++ b/src/patternfly/patternfly-theme-dark-unversioned.scss
@@ -1,5 +1,5 @@
 // stylelint-disable scss/dollar-variable-pattern
-$pf-global--theme--version: '';
+$--theme--version: '';
 // stylelint-enable
 
 // Version
